--- a/style.css
+++ b/style.css
@@ -40,43 +40,43 @@
   transition: transform 1s;
 }
 
-.show-menu #line1{
-    transform: rotate(45deg) translate(.3rem, .45rem);
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.3rem, 0.45rem);
 }
-.show-menu #line2{
-    opacity: 0;
-    visibility: hidden;
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
 }
-.show-menu #line3{
-    transform: rotate(-45deg) translate(.3rem, -.45rem);
-}
-
-.hamburguer span{
-    position: absolute;
-    left: 3rem;
-    height: 2rem;
-    width: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #a044ff;
-    color: #ffffff;
-    font-family: var(--font-action);
-    opacity: 0;
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.45rem);
 }
 
-.hamburguer span::before{
-    content: "";
-    position: absolute;
-    border-right: .5rem solid #a044ff;
-    border-top: .5rem solid transparent;
-    border-left: .5rem solid transparent;
-    border-bottom: .5rem solid transparent;
-    left: -1rem;
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  height: 2rem;
+  width: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #a044ff;
+  color: #ffffff;
+  font-family: var(--font-action);
+  opacity: 0;
 }
 
-.show-menu .hamburguer:hover span{
-    opacity: 1;
+.hamburguer span::before {
+  content: "";
+  position: absolute;
+  border-right: 0.5rem solid #a044ff;
+  border-top: 0.5rem solid transparent;
+  border-left: 0.5rem solid transparent;
+  border-bottom: 0.5rem solid transparent;
+  left: -1rem;
+}
+
+.show-menu .hamburguer:hover span {
+  opacity: 1;
 }
 
 header {
