--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ header {
   grid-row: 5 / -1;
 }
 .sessao-conhecimentos{
-  background-color: #f5f5f5;
+  background-color: white;
 }
 .sessao-header{
   display: flex;
